# K-Clustering

./: Makefile  README.md  assignment.cpp  assignment.h  cluster.conf  cluster.cpp  fi.cpp  fi.h  g.cpp  g.h  hash_node.h  hash_table.h  help_functions.h  hyper_cube.h  hyper_node.h  hyperplane.cpp  hyperplane.h  initialization.cpp  initialization.h  metric.h  update.cpp  update.h  utilities.cpp  utilities.h
tests/: .binarySearch_test.cpp.swp  .initialization_test.cpp.swp  .test.cpp.swp  .whattotest.cpp.swp  CMakeCache.txt  CMakeLists.txt  HashTable_test.cpp  Makefile  binarySearch_test.cpp  clustering_test.cpp  cmake_install.cmake  distance_test.cpp
